--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.9" />
+    <PackageReference Include="Mime-Detective" Version="22.7.21" />
   </ItemGroup>
 
 </Project>
