--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Entities\Entities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ValidationRules\FluentValidation\" />
+  </ItemGroup>
+
 </Project>
